# client

./: .deepsource.toml  .eslintrc.cjs  .gitmodules  README.md  components.d.ts  env.d.ts  index.html  package.json  pnpm-lock.yaml  rollup.config.ts  splashscreen.html  tailwind.config.js  tsconfig.app.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml
addons/vp-mdit-plugins-bundle/: plugins.esm.js  plugins.esm.min.js  plugins.js  plugins.min.cjs
cypress/e2e/: homepage.cy.ts
icons/: icon.icns
logos/: icon.icns
mock/: index.ts  v1-class-account.ts
public/: splashscreen.html
scripts/: build.mjs
src/: App.vue  index.css  main.ts  readme.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/@types/class/: home.d.ts  student.d.ts
src/@types/data/: deduction.d.ts
src/apis/: readme.md
src/app/: main.ts  preload.ts
src/app/configs/: index.ts  recent.slides.d.ts  recent.slides.ts
src/app/preload-modules/: slides.ts
src/app/slides/: detect.ts
src/assets/: base.css  md.css  style.css  style.css.map  style.less  style.sass
src/components/articles/: Error.vue  LoadingMarkdown.vue  ZhArticle.vue  compiler.ts  example.md
src/components/data/: ZhDataDeduction.vue
src/components/editor/: ZhEditor.vue
src/components/forms/: ZhForm.d.ts  ZhForm.md  ZhForm.vue
src/plugins/: agent.ts  axios.ts
src/router/: index.ts
src/stores/: header.ts  menuStatus.ts  sidebar.d.ts  sidebar.ts
src/views/: ConfigView.vue  FormText.vue  HomeView.vue
(+28 files in other folders)
