[package]
name = "zhihui-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["Zhihui Developer Team"]
license = "GPL-3"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
chrono = "0.4.22"
reqwest = "0.11.11"
rust_socketio = "0.3.1"
rusqlite = "0.28.0"
window-shadows = "0.1.3"
json5 = "0.4.1"
base64 = "0.13.0"
buffer = "0.1.9"
rust-crypto = "0.2.36"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
